# google_matrix_Samer

./: .gitignore  CMakeLists.txt  data-link.txt  my_test.c  pagerank.c  pr_test.c  test_data.txt  test_proj_Gpr.c  test_proj_Gqr.c  wholelinks_to_selectedlinks_index_modified.c
code/: merge.c  pagerank.c  test_proj_Gqr.c  wholelinks_to_selectedlinks_index_modified.c
